--- a/src/App.css
+++ b/src/App.css
@@ -1,261 +1,268 @@
 @import url('https://fonts.googleapis.com/css?family=Arima+Madurai:300');
-
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1 {
-	font-family: 'Arima Madurai', cursive;
-	color: #fff;
-	font-size: 4rem;
-	letter-spacing: -3px;
-	text-shadow: 0px 1px 1px rgba(255,255,255,0.6);
-	position: relative;
-	z-index: 3;
+    font-family: 'Arima Madurai', cursive;
+    color: #fff;
+    font-size: 4rem;
+    letter-spacing: -3px;
+    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
+    position: relative;
+    z-index: 3;
 }
 
 .container {
-	z-index: 1;
-	position: relative;
-	min-height: 100vh;
-	min-height: 35rem;
+    z-index: 1;
+    position: relative;
+    min-height: 100vh;
+    min-height: 35rem;
 }
 
 .bird {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells.svg);
-	background-size: auto 100%;
-	width: 352px;
-	height: 500px;
-	will-change: background-position;
-	
-	animation-name: fly-cycle;
-	animation-duration: 1s;
-	animation-delay: -0.5s;
-	animation-timing-function: steps(10);
-	animation-iteration-count: infinite;
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells.svg);
+    background-size: auto 100%;
+    width: 352px;
+    height: 500px;
+    will-change: background-position;
+    animation-name: fly-cycle;
+    animation-duration: 1s;
+    animation-delay: -0.5s;
+    animation-timing-function: steps(10);
+    animation-iteration-count: infinite;
 }
 
 .bird-container {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	will-change: transform;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    will-change: transform;
 }
 
 @keyframes fly-cycle {
-	
-	100% {
-		
-	}
-	
+    100% {}
 }
-body{
-  background: #282c34;
+
+body {
+    background: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  /* display: flex;
+    background-color: #282c34;
+    min-height: 100vh;
+    /* display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin); */
-  color: white;
+    color: white;
 }
-
 
 .blinking-cursor {
-  color: #fff;
-  font-weight: 100;
-  font-size: 30px;
-  -webkit-animation: 1s blink step-end infinite;
-  -moz-animation: 1s blink step-end infinite;
-  -ms-animation: 1s blink step-end infinite;
-  -o-animation: 1s blink step-end infinite;
-  animation: 1s blink step-end infinite;
+    color: #fff;
+    font-weight: 100;
+    font-size: 30px;
+    -webkit-animation: 1s blink step-end infinite;
+    -moz-animation: 1s blink step-end infinite;
+    -ms-animation: 1s blink step-end infinite;
+    -o-animation: 1s blink step-end infinite;
+    animation: 1s blink step-end infinite;
 }
 
-.background{
-  position: fixed;
-  z-index: -1;
-  height:  100%;
-  width: 100%;
+.background {
+    position: fixed;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
 }
 
-.clouds{
-  position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	/* will-change: transform; */
+.clouds {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* will-change: transform; */
 }
 
-.cloud{
-  position: absolute;
-  border-radius: 300px;
-  top: 20%;
-  left: -50%;
-  width: 183px;
-  height: 50px;
-  background: #c3c3c3;
-	animation: 20s cloud linear infinite alternate-reverse;
+.cloud {
+    position: absolute;
+    border-radius: 300px;
+    top: 20%;
+    left: -50%;
+    width: 183px;
+    height: 50px;
+    background: #c3c3c3;
+    animation: 20s cloud linear infinite alternate-reverse;
 }
 
-.cloud:after, .cloud:before{
-  content: "";
-  background: #c3c3c3;
-  position: absolute;
+.cloud:after,
+.cloud:before {
+    content: "";
+    background: #c3c3c3;
+    position: absolute;
 }
 
-.cloud:after{
-  height: 100px;
-  width: 100px;
-  top: -58px;
-  left: 65px;
-  border-radius: 50px;
+.cloud:after {
+    height: 100px;
+    width: 100px;
+    top: -58px;
+    left: 65px;
+    border-radius: 50px;
 }
 
-
-.cloud:before{
-  height: 80px;
-  width: 80px;
-  top: -39px;
-  left: 14px;
-  border-radius: 64px;
+.cloud:before {
+    height: 80px;
+    width: 80px;
+    top: -39px;
+    left: 14px;
+    border-radius: 64px;
 }
 
-.moon{
-  background: #fff;
-  z-index: -2;
-  position: absolute;
-  width: 5em;
-  height: 5em;
-  border-radius: 50px;
-  transform: translate(319%, 6%);
+.moon {
+    background: #fff;
+    z-index: -2;
+    position: absolute;
+    width: 5em;
+    height: 5em;
+    border-radius: 50px;
+    transform: translate(319%, 6%);
+    box-shadow: 0 0 5px 2px aliceblue;
 }
 
-.star{
-
-  height: 2px;
-  width: 2px;
-  background: yellow;
-  border-radius: 30px;
-  position: absolute;
-  z-index: -2;
-  
-  
+.crater1, .crater2, .crater3 {
+    height: 6px;
+    width: 6px;
+    background: #ccc;
+    border-radius: 40px;
+    top: 30px;
+    left: 58px;
+    position: relative;
 }
 
+.crater2{
+  top: 25px;
+  left: 40px;
+  height: 10px;
+  width: 10px;
+  background: #e3e3e3;
+}
 
-.star:after{
-  content: "";
-  height: 2px;
-  width: 2px;
-  background: yellow;
-  border-radius: 30px;
-  z-index: -2;
-  top: 25%;
-  left: 30%;
-  display: inline-block;
-  animation: 5s star linear infinite;
+.star {
+    height: 2px;
+    width: 2px;
+    background: yellow;
+    border-radius: 30px;
+    position: absolute;
+    z-index: -2;
+}
+
+.star:after {
+    content: "";
+    height: 2px;
+    width: 2px;
+    background: yellow;
+    border-radius: 30px;
+    z-index: -2;
+    top: 25%;
+    left: 30%;
+    display: inline-block;
+    animation: 5s star linear infinite;
 }
 
 .star:before {
-  display: inline-block;
-  content: "";
-  height: 2px;
-  width: 2px;
-  background: yellow;
-  border-radius: 30px;
-  z-index: -2;
-  top: 25%;
-  left: 30%;
-  animation: 7s star linear infinite;
+    display: inline-block;
+    content: "";
+    height: 2px;
+    width: 2px;
+    background: yellow;
+    border-radius: 30px;
+    z-index: -2;
+    top: 25%;
+    left: 30%;
+    animation: 7s star linear infinite;
 }
 
-.star1-animation{
-  animation: 4s star1 linear infinite;
-  top: 20%;
-  left: 50%;
+.star1-animation {
+    animation: 4s star1 linear infinite;
+    top: 20%;
+    left: 50%;
 }
 
-
-.star2-animation{
-  animation: 8s star2 linear infinite;
-  top: 21%;
-  left: 51%;
+.star2-animation {
+    animation: 8s star2 linear infinite;
+    top: 21%;
+    left: 51%;
 }
 
-
-.star3-animation{
-  animation: 2s star1 linear infinite;
-  top: 22%;
-  left: 52%;
+.star3-animation {
+    animation: 2s star1 linear infinite;
+    top: 22%;
+    left: 52%;
 }
 
-@keyframes star1{
-  50%{
-    color: #8e8e09
-  }
-  100%{
-    box-shadow: 0 0 1px 1px #5f652d;
-  }
+@keyframes star1 {
+    50% {
+        color: #8e8e09
+    }
+    100% {
+        box-shadow: 0 0 1px 1px #5f652d;
+    }
 }
 
-
-@keyframes star2{
-  100%{
-    box-shadow: 0 0 1px 2px #5f652d;
-  }
+@keyframes star2 {
+    100% {
+        box-shadow: 0 0 1px 2px #5f652d;
+    }
 }
 
-.main-content{
-  z-index: 1;
-  background: transparent;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
+.main-content {
+    z-index: 1;
+    background: transparent;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
 }
 
-.intro{
-  /* animation: 4s zoom linear; */
-  /* position: relative; */
+.intro {
+    /* animation: 4s zoom linear; */
+    /* position: relative; */
 }
 
 @keyframes zoom {
-  from {
-    /* left: 100%; */
-    /* top: 100%; */
-    transform: translate(50px, 50px);
-  }
-  to {
-    /* left: 0; */
-    /* top: 0; */
-    transform: translate(0, 0)
-  }
+    from {
+        /* left: 100%; */
+        /* top: 100%; */
+        transform: translate(50px, 50px);
+    }
+    to {
+        /* left: 0; */
+        /* top: 0; */
+        transform: translate(0, 0)
+    }
 }
 
 @keyframes blink {
-  from, to {
-    color: transparent;
-  }
-  50% {
-    color: #fff;
-  }
+    from,
+    to {
+        color: transparent;
+    }
+    50% {
+        color: #fff;
+    }
 }
 
-@keyframes cloud{
-  from{
-    left: 0;
-  }
-  to{
-    left: 100%;
-  }
+@keyframes cloud {
+    from {
+        left: 0;
+    }
+    to {
+        left: 100%;
+    }
 }
